Fix column count on smaller devices

--- a/src/blocks/cards-collection/scss/_editor.scss
+++ b/src/blocks/cards-collection/scss/_editor.scss
@@ -13,7 +13,9 @@
 		@include novablocks-cards-collection-layout;
 		@include novablocks-cards-columns-count(1);
 
-		--surplus: 100px;
+		> * {
+			--surplus: 100px;
+		}
 
 		> .block-list-appender {
 			align-self: center;
